fetch data and render on UI

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </button>
         </form>
 
-        <nav class="nav"
+        <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
