--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script type="module" defer src="src/js/controller.js"></script>
 
-    <title>Recipy // Search over 1,000,000 recipes</title>
+    <title>Recipy | Search 1M+ recipes</title>
   </head>
 
   <body>
