display error for no recipe data fetched

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
       <div class="search-results">
         <ul class="results">
-          <a href="#664c8f193e7aa067e94e84c2">RECIPE 1</a>
+          <!-- <a href="#664c8f193e7aa067e94e84c2">RECIPE 1</a>
           <a href="#664c8f193e7aa067e94e86b9">RECIPE 1</a>
-          <a href="#5ed6604591c37cdc054bc886">RECIPE 1</a>
+          <a href="#5ed6604591c37cdc054bc886">RECIPE 1</a> -->
         </ul>
 
         <div class="pagination">
@@ -107,14 +107,16 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          Designed by
           <a
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+          > and built by
+          <a class="daffa-link" target="_blank" href="https://daffalabs.com/">
+            Swaleh Hussein
+          </a>
         </p>
       </div>
 
