complete bookmark functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/logo_icon-2.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="src/img/logo_icon-2.png"
+      type="image/x-icon"
+    />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script type="module" defer src="src/js/controller.js"></script>
@@ -19,7 +23,11 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo_icon_no-bg-3.png" alt="Logo" class="header__logo" />
+        <img
+          src="src/img/logo_icon_no-bg-3.png"
+          alt="Logo"
+          class="header__logo"
+        />
         <form class="search">
           <input
             type="text"
@@ -63,8 +71,6 @@
                       No bookmarks yet. Find a nice recipe and bookmark it :)
                     </p>
                   </div>
-
-                  <!--  -->
                 </ul>
               </div>
             </li>
@@ -73,11 +79,9 @@
       </header>
 
       <div class="search-results">
-        <ul class="results">
-        </ul>
+        <ul class="results"></ul>
 
-        <div class="pagination">
-        </div>
+        <div class="pagination"></div>
 
         <p class="copyright">
           Designed by
@@ -86,7 +90,8 @@
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          > and built by
+          >
+          and built by
           <a class="daffa-link" target="_blank" href="https://daffalabs.com/">
             Swaleh Hussein
           </a>
@@ -117,7 +122,6 @@
             </div>
             <p>No recipes found for your query. Please try again!</p>
           </div> -->
-
       </div>
     </div>
 
