--- a/index.html
+++ b/index.html
@@ -107,21 +107,6 @@
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
-
-        <!-- <div class="spinner">
-          <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
-          </svg>
-        </div> -->
-
-        <!-- <div class="error">
-            <div>
-              <svg>
-                <use href="src/img/icons.svg#icon-alert-triangle"></use>
-              </svg>
-            </div>
-            <p>No recipes found for your query. Please try again!</p>
-          </div> -->
       </div>
     </div>
 
@@ -132,24 +117,60 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST23" required name="title" type="text" />
+          <input
+            value=""
+            required
+            name="title"
+            type="text"
+            placeholder="Carrot cake"
+          />
           <label>URL</label>
-          <input value="TEST23" required name="sourceUrl" type="text" />
+          <input
+            value=""
+            required
+            name="sourceUrl"
+            type="text"
+            placeholder="www.carrotcake.expample"
+          />
           <label>Image URL</label>
-          <input value="TEST23" required name="image" type="text" />
+          <input
+            value=""
+            required
+            name="image"
+            type="text"
+            placeholder="www.carrotcake.expample/image"
+          />
           <label>Publisher</label>
-          <input value="TEST23" required name="publisher" type="text" />
+          <input
+            value=""
+            required
+            name="publisher"
+            type="text"
+            placeholder="John Doe"
+          />
           <label>Prep time</label>
-          <input value="23" required name="cookingTime" type="number" />
+          <input
+            value=""
+            required
+            name="cookingTime"
+            type="number"
+            placeholder="23"
+          />
           <label>Servings</label>
-          <input value="23" required name="servings" type="number" />
+          <input
+            value=""
+            required
+            name="servings"
+            type="number"
+            placeholder="23"
+          />
         </div>
 
         <div class="upload__column">
           <h3 class="upload__heading">Ingredients</h3>
           <label>Ingredient 1</label>
           <input
-            value="0.5,kg,Rice"
+            value=""
             type="text"
             required
             name="ingredient-1"
@@ -157,14 +178,14 @@
           />
           <label>Ingredient 2</label>
           <input
-            value="1,,Avocado"
+            value=""
             type="text"
             name="ingredient-2"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
           <label>Ingredient 3</label>
           <input
-            value=",,salt"
+            value=""
             type="text"
             name="ingredient-3"
             placeholder="Format: 'Quantity,Unit,Description'"
