use fractional.js instead

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             required
             name="sourceUrl"
             type="text"
-            placeholder="www.carrotcake.expample"
+            placeholder="https://www.carrotcake.expample"
           />
           <label>Image URL</label>
           <input
@@ -138,7 +138,7 @@
             required
             name="image"
             type="text"
-            placeholder="www.carrotcake.expample/image"
+            placeholder="https://www.carrotcake.expample/image"
           />
           <label>Publisher</label>
           <input
@@ -154,7 +154,7 @@
             required
             name="cookingTime"
             type="number"
-            placeholder="23"
+            placeholder="3"
           />
           <label>Servings</label>
           <input
@@ -162,7 +162,7 @@
             required
             name="servings"
             type="number"
-            placeholder="23"
+            placeholder="5"
           />
         </div>
 
